@@ -31,6 +31,7 @@ Thanks!
 - Added iTunes-like behaviour for add-button. Holding down Option will toggle to "New Smart Folder".
 - Added BlogThing to list of supported blog editors.
 - Help localized to German.
+- Enable JavaScript for styles using the file "script.js", if it exists. (Thanks to Les Orchard).
 
 2.1.0.2108
 ----------
